--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -24,11 +23,13 @@ header {
 }
 
 header h1 {
+    color: #ff6347; /* A bright color for the title (tomato red) */
     font-size: 2.5rem;
     margin-bottom: 0.5rem;
 }
 
 header p {
+    color: #333333; /* Dark gray for the phrase */
     font-size: 1.2rem;
     opacity: 0.9;
 }
