--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ footer {
     margin-bottom: 0.8rem;
 }
 
-/* Hourglass Animation */
+/* hourglass Animation */
 .hourglass-container {
     position: relative;
     margin: 1rem auto;
