--- a/style.css
+++ b/style.css
@@ -117,8 +117,8 @@ footer {
 .hourglass-container {
     position: relative;
     margin: 1rem auto;
-    height: 50px;
-    width: 50px;
+    height: 100px;
+    width: 60px;
 }
 
 /* Hourglass Shape */
@@ -126,34 +126,35 @@ footer {
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 20px;
-    height: 20px;
-    background-color: transparent;
+    width: 60px;
+    height: 100px;
     border: 5px solid #e65100;
-    border-radius: 50%;
+    border-bottom: none;
+    border-radius: 10px;
     transform: translate(-50%, -50%);
-    animation: hourglass 1s infinite ease-in-out;
-}
-
-.hourglass:before,
-.hourglass:after {
-    content: '';
-    position: absolute;
-    background-color: #e65100;
-    width: 5px;
-    height: 50%;
-    left: 50%;
-    transform: translateX(-50%);
+    animation: hourglass 2s infinite linear;
 }
 
 .hourglass:before {
+    content: '';
+    position: absolute;
     top: 0;
-    border-radius: 5px 5px 0 0;
+    left: 0;
+    width: 60px;
+    height: 50px;
+    border: 5px solid #e65100;
+    border-radius: 50%;
 }
 
 .hourglass:after {
+    content: '';
+    position: absolute;
     bottom: 0;
-    border-radius: 0 0 5px 5px;
+    left: 0;
+    width: 60px;
+    height: 50px;
+    border: 5px solid #e65100;
+    border-radius: 50%;
 }
 
 /* Hourglass animation */
