--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-
+/* General Styles */
 * {
     margin: 0;
     padding: 0;
@@ -113,61 +113,39 @@ footer {
     margin-bottom: 0.8rem;
 }
 
-
+/* Hourglass Animation */
 .hourglass-container {
     position: relative;
     margin: 1rem auto;
-    height: 100px;
-    width: 60px;
+    height: 50px;
+    width: 50px;
 }
 
-/* Hourglass Shape */
 .hourglass {
+    width: 30px;
+    height: 30px;
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 60px;
-    height: 100px;
-    border: 5px solid #e65100;
-    border-bottom: none;
-    border-radius: 10px;
     transform: translate(-50%, -50%);
-    animation: hourglass 2s infinite linear;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-top: 15px solid #e65100;
+    border-bottom: 15px solid #e65100;
+    animation: rotate-hourglass 1s infinite linear;
 }
 
-.hourglass:before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 60px;
-    height: 50px;
-    border: 5px solid #e65100;
-    border-radius: 50%;
-}
-
-.hourglass:after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 60px;
-    height: 50px;
-    border: 5px solid #e65100;
-    border-radius: 50%;
-}
-
-/* Hourglass animation */
-@keyframes hourglass {
-    0%, 100% {
+/* Rotating hourglass */
+@keyframes rotate-hourglass {
+    0% {
         transform: translate(-50%, -50%) rotate(0deg);
     }
-    50% {
-        transform: translate(-50%, -50%) rotate(180deg);
+    100% {
+        transform: translate(-50%, -50%) rotate(360deg);
     }
 }
 
-
+/* Pulsing Animation */
 @keyframes pulse {
     0% {
         transform: scale(1);
